erDiagram
  users ||--o{ shops : "owns"
  shops ||--o{ shop_dates : "has"

  users {
    INTEGER id PK
    TEXT username UK "NOT NULL"
    TEXT hashed_password "NOT NULL"
    INTEGER created_at "NOT NULL, epoch seconds"
  }

  shops {
    INTEGER id PK
    TEXT username FK "NOT NULL, CASCADE"
    TEXT name "NOT NULL"
    INTEGER total "NOT NULL, DEFAULT 0"
  }

  shop_dates {
    INTEGER shop_id PK,FK "NOT NULL, CASCADE"
    INTEGER date_key PK "NOT NULL, epoch seconds"
    INTEGER count "NOT NULL, DEFAULT 0"
  }